@startuml
title クラス図

' クローラークラス
abstract class Crawler #LightCoral
class FavCrawler #LightCoral
class RetweetCrawler #LightCoral

' DBクラス
abstract class DBControllerBase #PaleGreen
class FavDBController #PaleGreen
class RetweetDBController #PaleGreen

' SQLalchemy関連クラス
class Base #LightBlue{
    SQLalchemy Base
}
class Favorite #LightBlue{
    Model
}
class Retweet #LightBlue{
    Model
}
class DeleteTarget #LightBlue{
    Model
}

' 外部リンク探索ベース
class LinkSearchBase
' pixivクラス
class PixivAPIController
' nijieクラス
class NijieController

' 関連追加
' FavCrawlerとRetweetCrawlerはCrawlerから派生する(is a)
Crawler <|-- FavCrawler
Crawler <|-- RetweetCrawler

' CrawlerはLinkSearchBaseを保持する(has a)
DBControllerBase --- Crawler
LinkSearchBase --o Crawler

' FavDBControllerとRetweetDBControllerはDBControllerBaseから派生する(is a)
DBControllerBase <|.. FavDBController
DBControllerBase <|.. RetweetDBController

' FavCrawlerとRetweetCrawlerはそれぞれDBControllerを保持する(has a)
FavDBController --o FavCrawler
RetweetDBController --o RetweetCrawler

' SQLalchemy関連
Base <|.. Favorite
Base <|.. Retweet
Base <|.. DeleteTarget

' SQLalchemy関連はそれぞれのDBControllerから呼び出される
FavDBController --- Favorite
FavDBController --- DeleteTarget
RetweetDBController --- Retweet
RetweetDBController --- DeleteTarget

LinkSearchBase <|-- PixivAPIController
LinkSearchBase <|-- NijieController
'DBControllerBase *-- Crawler

@enduml